--- a/index.html
+++ b/index.html
@@ -19,8 +19,58 @@
         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
         <button class="btn">Contact us</button>
       </div>
-
     </section>
   </header>
+
+  <main>
+    <section class="main-body">
+
+      <div class="main-img">
+        <img src="images/person.png" alt="person">
+      </div>
+      <div class="main-info">
+        <h2>My failures of previous year</h2>
+        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+        <ul class="main-list">
+          <li>Contrary to popular belief, is not simply.</li>
+          <li>Contrary to popular belief.</li>
+          <li>Contrary to popular , is not simply.</li>
+          <li>Contrary to popular belief, is not simply.</li>
+          <li>Contrary to popular belief.</li>
+        </ul>
+      </div>
+    </section>
+  </main>
+
+  <main>
+    <section class="main-card">
+      <h2>My Plan</h2>
+      <div class="card">
+        <div class="card-info">
+          <img src="images/icons/web.png" alt="js">
+          <h3>Web Development</h3>
+          <p>I want to start</p>
+        </div>
+        <div class="card-info">
+          <img src="images/icons/js.png" alt="js">
+          <h3>Java Script</h3>
+          <p>I want to start</p>
+        </div>
+        <div class="card-info">
+          <img src="images/icons/smoke.png" alt="js">
+          <h3>Smoking Habit</h3>
+          <p>I want to end</p>
+        </div>
+        <div class="card-info">
+          <img src="images/icons/ecom.png" alt="js">
+          <h3>ecommerce</h3>
+          <p>I want to develop</p>
+        </div>
+
+      </div>
+    </section>
+  </main>
+
+
 </body>
 </html>
