--- a/index.html
+++ b/index.html
@@ -66,10 +66,48 @@
           <h3>ecommerce</h3>
           <p>I want to develop</p>
         </div>
-
       </div>
+
+      <!-- <div class="skill-bg">
+            <div class="skills-content">
+              <h2>Awlays keep a positive mindset</h2>
+              <button>Call Now</button>
+            </div>
+      </div> -->
+
+  <!-- <div class="banner">
+      <h2>Awlays keep a positive mindset</h2>
+      <button class="btn">Call now</button>
+    <img class="img-1" src="images/watch.png" alt="">
+    <img class="img-2" src="images/gradient1.png" alt="">
+  </div> -->
     </section>
   </main>
+
+
+  <!-- footre -->
+   <footer>
+    <section class="main-section">
+      <div class="contain">
+        <h2>Future</h2>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+        <div class="png">
+         <p>Email : info@gmail.com</p>
+         <p>Phone : 01500 00 00 00</p>
+        </div>
+        <div class="logo">
+          <img src="images/icons/fb.png" alt="">
+          <img src="images/icons/twitter.png" alt="">
+          <img src="images/icons/youtube.png" alt="">
+        </div>
+      </div>
+      <form>
+        <h4>Subscribe</h4>
+        <input type="email" name="" id="email" placeholder="Enter your Email">
+        <button>Subscribr</button>
+      </form>
+    </section>
+   </footer>
 
 
 </body>
